Fixed like button alignment and changed mobile nav

--- a/src/App.css
+++ b/src/App.css
@@ -302,6 +302,15 @@
 }
 
 .like-button {
+  display: flex;
+  width: 28px;
+  flex-direction: row;
+  flex-wrap: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.like-button-label {
   cursor: pointer;
   align-self: flex-end;
 }
@@ -434,36 +443,6 @@
   transform: translateX(0%);
 }
 
-.nav-name {
-  display: flex;
-  flex-direction: row;
-  color: white;
-  text-decoration: none;
-  justify-content: space-evenly;
-  align-items: center;
-  align-self: center;
-  transition: all 0.5s;
-  font-size: 18px;
-}
-
-.mobile-nav-name {
-  display: flex;
-  flex-direction: row;
-  color: white;
-  text-decoration: none;
-  justify-content: space-evenly;
-  align-items: center;
-  align-self: center;
-  transition: all 0.5s;
-  font-size: 12px;
-}
-
-.nav-logo {
-  height: 48px;
-  width: 48px;
-  color: white;
-}
-
 .settings-header {
   margin: auto;
   margin-top: 20px;
@@ -484,9 +463,27 @@
   transition: all 0.5s ease;
 }
 
+.nav-name {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  text-decoration: none;
+  justify-content: space-evenly;
+  align-items: center;
+  align-self: center;
+  transition: all 0.5s;
+  font-size: 18px;
+}
+
+.nav-logo {
+  height: 48px;
+  width: 48px;
+  color: white;
+}
+
 .nav-links {
   width: 350px;
-  padding-left: 26px;
+  padding-left: 27px;
   padding-right: 20px;
   display: flex;
   justify-content: space-around;
@@ -511,6 +508,44 @@
   padding: 0;
   border-radius: 50%;
   transition: all 0.5s;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+  background-color: var(--primary-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 5px 15px 0 var(--tertiary-shadow-color), 0 2px 4px 0 var(--primary-shadow-color);
+  z-index: 1;
+}
+
+.mobile-nav-top {
+  display: none;
+  height: 60px;
+  width: 100%;
+  background-color: var(--primary-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 5px 15px 0 var(--tertiary-shadow-color), 0 2px 4px 0 var(--primary-shadow-color);
+  z-index: 1;
+}
+
+.mobile-nav-bottom {
+  display: none;
+  height: 60px;
+  width: 100%;
+  background-color: var(--primary-color);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0 5px 15px 0 var(--tertiary-shadow-color), 0 2px 4px 0 var(--primary-shadow-color);
+  z-index: 1;
 }
 
 .fade-enter {
@@ -649,32 +684,6 @@ hr {
   width: 100%;
 }
 
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 60px;
-  width: 100%;
-  background-color: var(--primary-color);
-  position: fixed;
-  top: 0;
-  left: 0;
-  box-shadow: 0 5px 15px 0 var(--tertiary-shadow-color), 0 2px 4px 0 var(--primary-shadow-color);
-  z-index: 69;
-}
-
-.mobile-nav {
-  display: none;
-  height: 60px;
-  width: 100%;
-  background-color: var(--primary-color);
-  position: fixed;
-  top: 0;
-  left: 0;
-  box-shadow: 0 5px 15px 0 var(--tertiary-shadow-color), 0 2px 4px 0 var(--primary-shadow-color);
-  z-index: 69;
-}
-
 textarea {
   width: 100%;
   min-height: 20px;
@@ -766,23 +775,19 @@ body::-webkit-scrollbar-thumb {
   .chat-form {
     margin-left: -40%;
   }
-  .nav-logo, .nav-name {
+  .nav-logo {
     display: none;
   }
   .nav-links {
     width: 100%;
   }
-  .mobile-nav {
+  .nav {
+    display: none;
+  }
+  .mobile-nav-top, .mobile-nav-bottom {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  nav {
-    position: fixed;
-    bottom: 0!important;
-    left: 0!important;
-    top: initial;
-    height: 60px;
   }
   body {
     padding-bottom: 80px;
